force-app/main/default/objects/AccountSubsidiary__c/AccountSubsidiary__c.object-meta.xml
<CustomObject>
    <label>Account Subsidiary</label>
    <nameField>
        <displayFormat>Acc Sub {000000}</displayFormat>
        <label>Subsidiary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Subsidiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>