force-app/main/default/objects/AccountSubsidiary__c/fields/AccountSubsidiary__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiary__c</fullName>
    <formula>Account__r.CustomerNumber__c  + &quot;-&quot;+  SubsidiaryName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subsidiary</label>
    <type>Text</type>
</CustomField>