force-app/main/default/objects/AccountSubsidiary__c/fields/AccountSubsidiaryId__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiaryId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SubsidiaryId</label>
    <type>Text</type>
</CustomField>