force-app/main/default/objects/AccountSubsidiary__c/fields/AgodiUpdateIsRunning__c.field-meta.xml
<CustomField>
    <fullName>AgodiUpdateIsRunning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agodi Update is Running</label>
    <type>Checkbox</type>
</CustomField>