force-app/main/default/objects/AccountSubsidiary__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>zRemove Block</label>
    <length>55</length>
    <type>Text</type>
</CustomField>