force-app/main/default/objects/AccountSubsidiary__c/fields/BlockReason__c.field-meta.xml
<CustomField>
    <fullName>BlockReason__c</fullName>
    <label>Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>