force-app/main/default/objects/AccountSubsidiary__c/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>