force-app/main/default/objects/AccountSubsidiary__c/fields/creditLimitReached__c.field-meta.xml
<CustomField>
    <fullName>creditLimitReached__c</fullName>
    <formula>CreditLimit__c &lt; OutstandingBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>creditLimitReached</label>
    <type>Checkbox</type>
</CustomField>