force-app/main/default/objects/AccountSubsidiary__c/fields/InactiveNs__c.field-meta.xml
<CustomField>
    <fullName>InactiveNs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactive Checkbox to be synced from NetSuite. Flow decides whether or not this field is allowed to update Inactive flag.</description>
    <label>Inactive NS</label>
    <type>Checkbox</type>
</CustomField>