force-app/main/default/objects/AccountSubsidiary__c/fields/IntegrationFactorySend__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFactorySend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Factory Send</label>
    <type>Checkbox</type>
</CustomField>