force-app/main/default/objects/AccountSubsidiary__c/fields/lastUpdatedBySystem__c.field-meta.xml
<CustomField>
    <fullName>lastUpdatedBySystem__c</fullName>
    <label>lastUpdatedBySystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>