force-app/main/default/objects/AccountSubsidiary__c/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>Legal Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
            <value>
                <fullName>NoordhoffDigitaalBedrijf</fullName>
                <label>Noordhoff Digitaal Bedrijf</label>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>