force-app/main/default/objects/AccountSubsidiary__c/fields/ManualUpdate__c.field-meta.xml
<CustomField>
    <fullName>ManualUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Update</label>
    <type>Checkbox</type>
</CustomField>