force-app/main/default/objects/AccountSubsidiary__c/fields/NetsuiteCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCustomerNumber__c</fullName>
    <label>Netsuite Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>