force-app/main/default/objects/AccountSubsidiary__c/fields/NetsuiteInternalId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteInternalId__c</fullName>
    <externalId>true</externalId>
    <label>Netsuite Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>