force-app/main/default/objects/AccountSubsidiary__c/fields/OutstandingBalance__c.field-meta.xml
<CustomField>
    <fullName>OutstandingBalance__c</fullName>
    <formula>UnbilledOrders__c + Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>