force-app/main/default/objects/AccountSubsidiary__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <formula>IF(Blocked__c || 
   AND(CreditLimit__c &lt;  OutstandingBalance__c,  NOT(ISPICKVAL(LegalName__c, &apos;Noordhoff&apos;))), 
   &quot;Prepayment&quot;, &quot;Invoice&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account must have prepayment if blocked or outstanding balance is larger then credit limit</inlineHelpText>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>