force-app/main/default/objects/AccountSubsidiary__c/fields/SubsidiaryexternalId__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryexternalId__c</fullName>
    <externalId>true</externalId>
    <label>Subsidiary external Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>