force-app/main/default/objects/AccountSubsidiary__c/fields/SubsidiaryId__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryId__c</fullName>
    <formula>CASE(LegalName__c,
&quot;Plantyn&quot;, &quot;17&quot;,
&quot;Liber&quot;, &quot;14&quot;,
&quot;Noordhoff&quot;, &quot;8&quot;,
&quot;Noordhoff Zorg&quot;,&quot;21&quot;,
&quot;NoordhoffDigitaalBedrijf&quot;,&quot;9&quot;,
&quot;Contact System Administrator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Id</label>
    <type>Text</type>
</CustomField>