force-app/main/default/objects/AccountSubsidiary__c/fields/SubsidiaryName__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryName__c</fullName>
    <formula>CASE(LegalName__c,
&quot;Plantyn&quot;, &quot;PU&quot;,
&quot;Liber&quot;, &quot;LI&quot;,
&quot;Noordhoff&quot;, &quot;NU&quot;,
&quot;NoordhoffDigitaalBedrijf&quot;,&quot;NU&quot;,
&quot;Contact System Administrator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Name</label>
    <type>Text</type>
</CustomField>