force-app/main/default/objects/AccountSubsidiary__c/fields/UnbilledOrders__c.field-meta.xml
<CustomField>
    <fullName>UnbilledOrders__c</fullName>
    <label>Unbilled Orders</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>