force-app/main/default/objects/AccountSubsidiary__c/validationRules/CantIntegrateInactiveDeleted.validationRule-meta.xml
<ValidationRule>
    <fullName>CantIntegrateInactiveDeleted</fullName>
    <active>true</active>
    <errorConditionFormula>And(Deleted__c=true,IntegrationFactorySend__c=true)</errorConditionFormula>
    <errorMessage>Can&apos;t Integrate Inactive/Deleted Record. To activate (uncheck the deleted box and uncheck Integration send check box)</errorMessage>
</ValidationRule>