force-app/main/default/objects/AccountSubsidiary__c/validationRules/NoManualUpdatewithInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>NoManualUpdatewithInactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ManualUpdate__c = true, OR(IsInactive__c = true, Deleted__c = true))</errorConditionFormula>
    <errorMessage>Can&apos;t manually update a record that is inactive or pending inactive</errorMessage>
</ValidationRule>