force-app/main/default/objects/AccountSubsidiary__c/validationRules/OutstandingBalanceCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>OutstandingBalanceCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Deleted__c),Deleted__c=True,OutstandingBalance__c &gt; 0 )</errorConditionFormula>
    <errorMessage>You cannot Inactivate an Account/Account Subsidiary that has an Outstanding Balance. The Order needs be fulfilled before this action can take place.</errorMessage>
</ValidationRule>