force-app/main/default/objects/AccountSubsidiary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NetsuiteCustomerNumber__c</columns>
    <columns>AccountSubsidiary__c</columns>
    <columns>BlockReason__c</columns>
    <columns>Block__c</columns>
    <columns>CreditLimit__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>